# eclpp11

./: .clang-format  CMakeLists.txt
clbind/: CMakeLists.txt
clbind/cmake/: FindEcl.cmake
clbind/examples/: test_package.cpp  test_package.lsp  type_conversion.cpp
clbind/include/clbind/: clbind.hpp  convert_types.hpp  ecl_utilities.hpp  function_traits.hpp  function_wrapper.hpp  package.hpp  slynk.hpp  type_conversion.hpp
clbind/lsp/: slynk.lsp
eclpp/: CMakeLists.txt  eclpp.hpp  pack.hpp
examples/: CMakeLists.txt  conversion.cpp  main.cpp  module.cpp  module.lisp.h
examples/lsp/: test.lisp
